mule-user-guide/v/3.4/installing.adoc
= Installing

== Mule Installation Procedure
. link:/mule-user-guide/v/3.4/hardware-and-software-requirements[Check hardware and software requirements.]
. link:/mule-user-guide/v/3.4/compatibility[Check system compatibility with platform software.]
. link:/mule-user-guide/v/3.4/downloading-and-launching-mule-esb[Download, then launch Mule.]
. link:/mule-user-guide/v/3.4/adding-community-runtime[Add Community runtime to Mule Studio] (_optional_).
. link:/mule-user-guide/v/3.4/installing-an-enterprise-license[Install an Enterprise license] (_optional_).
. link:/mule-user-guide/v/3.4/installing-extensions[Extend Mule with plugins, modules, runtimes and connectors] (_optional_).

[width="100%",cols="34%,33%,33%",]
|===
|http://www.mulesoft.com/mule-studio[image:studio.png[studio]] |http://www.mulesoft.com/mule-esb-open-source-esb[image:enterprise.png[enterprise]] |http://www.mulesoft.org/download-mule-esb-community-edition[image:community.png[community]]
|===

== Which version of Mule am I using?

Already have Mule installed? The following procedures outline the steps to take in both *Mule Studio* and *Mule Standalone* to determine the version number of your Mule runtime.

[tabs]
------
[tab,title="Studio"]
....
This procedure assumes that you have already launched Mule Studio and have opened a new or existing project. If you have not yet opened your first project in Studio, click *File* > *New* > *Mule Project*, and observe the default value in the *Server Runtime* field in the wizard.

. In the *Package Explorer*, click the expand arrow next to the name of one of your projects to expand the folder.
+
image:expand_arrow.png[expand_arrow]

. Double-click the `mule-project.xml` file to open it in a new tab in the canvas.

. Note the *Server Runtime* version in the *Runtime* column at right.
+
image:runtime.png[runtime]
....
[tab,title="Standalone"]
....
. Run Mule standalone from the command line.

[TIP]
====
 Need More Detail?
.. Open a new command line.  +
*PC*: Open the *Console*.  +
*Mac*: Open the *Terminal* application (Applications > Utilities > Terminal).
.. Access the directory and folder in which downloaded Mule. For example, type +
`cd /Users/aaron/Downloads/mule-standalone-3.3.1/`
.. Start Mule. For example, type +
`./bin/mule`
====

. After Mule starts, scroll up in the command line window to find the  `Mule ESB and Integration Platform`  where Mule displays the version.
+
image:standalone.png[standalone]
....
------
